syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

message CreatePostRequest {

}

message CreatePostResponse {

}

message FetchPostRequest {

}

message FetchPostResponse {

}

message UpdatePostRequest {

}

message UpdatePostResponse {

}

message DeletePostRequest {

}

message DeletePostResponse {

}

// Bloggo is a service that defines the interface to interact with the blog engine
service Bloggo {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc FetchPost(FetchPostRequest) returns (FetchPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}
